# ULTRACODE

./: .gitignore  LICENSE  README.md  demo.mc  demo.uc  main.py  mc.py  megacode.py  newspaperdemo.uc  pyproject.toml  replit.py  shell.py  uc.py  ultracode.py  ultracodeSHv2.uc
projects/: demo.uc
